--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (3.15.at.4-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 29 Mar 2022 11:20:35 +0900
+
 mkswu (3.15.at.3-1) experimental; urgency=low
 
   * misc fixes (see changelog)
