--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -135,7 +135,10 @@ msgstr ""
 msgid "version check failed for %s: %s must not mix alpha and digits\\ne.g.\\n\\t1.2.3-rc.4\\n\\t1.2.3.4\\n\\t1.2.3-4"
 msgstr ""
 #: mkswu
-msgid "metadata (+ part) in semver are ignored by swupdate, please use something else than %s"
+msgid "version %s has too many digit components, please use somthing else"
+msgstr ""
+#: mkswu
+msgid "metadata (+ part) in %s while valid semver are ignored by swupdate, please use something else"
 msgstr ""
 #: mkswu
 msgid "install_if must be higher or different"
