--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -328,9 +328,10 @@ msgstr "OS アップデートの場合は絶対パスを使ってください (%
 #: mkswu
 msgid ""
 "OS is only writable for base/extra_os updates and dest (%s) is not within "
-"volumes"
+"volumes. Use --extra-os."
 msgstr ""
-"%s はボリュームのアップデートではないので、base/extra_os以外に使えません。"
+"%s はボリューム以外に書き込もうとしますが、base/extra_os のアップデート以外に"
+"できません。--extra-osを指定してください。"
 
 #: mkswu
 msgid ".. is not allowed in destination path for volume update"
