--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (3.15.at.5-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 08 Apr 2022 17:12:35 +0900
+
 mkswu (3.15.at.4-1) experimental; urgency=low
 
   * upstream update (see changelog)
