--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ next
 ====
 features:
  - add NOTIFY_STARTING_CMD, NOTIFY_FAIL_CMD, NOTIFY_SUCCESS_CMD handling
+ - add swdesc_option for settings in sw-description (FORCE_VERSION and co)
+setting environment variables directly is still supported.
+Some of these options can also be set in /etc/atmark/baseos.conf with
+MKSWU_ prefix when it makes sense to do so (e.g. NOTIFY_*_CMD or POST_ACTION)
 
 3.15-at.5
 =========
