--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (3.15.at.6-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 25 Apr 2022 14:48:30 +0900
+
 mkswu (3.15.at.5-1) experimental; urgency=low
 
   * upstream update (see changelog)
